# IU_Emission

./: README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: EmissionsTable.tsx  Footer.tsx  Header.tsx  LocalMenu.tsx
