[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.8",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "https://artifactory.arag.com/artifactory/api/pypi/pypi/simple"
default = true

[[tool.uv.index]]
url = "https://artifactory.arag.com/artifactory/api/pypi/python-release-local/simple"

